# LLM-OCR

./: .env  main.py  pyproject.toml  requirements.txt
